--- a/src/components/Registration/Registration.css
+++ b/src/components/Registration/Registration.css
@@ -3,7 +3,7 @@ input {
     margin:auto;
 }
 
-.login {
+.registration {
     margin: auto;
     width: 50%;
     border: 3px solid rgb(97, 98, 153);
@@ -15,3 +15,4 @@ button {
     margin:auto;
     display: block;
 }
+
