--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -1,4 +1,6 @@
-.radio {
-    display: inline;
-    margin-right: 15px;
+.register {
+    margin: auto;
+    width: 300px;
+    text-align: center;
 }
+
