--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,18 +1,23 @@
-.login {
+form {
     width: 50%;
     padding: 10px;
     display: block;
     text-align: center;
-    display: block;
     margin:auto;
+    margin-top: 100px;
 }
+
 
 .loginBtn {
     margin:auto;
-    display: block;
     width: 50%;
 }
 
 .button {
     margin-top: 10px;
 }
+
+.textField {
+    margin-top: 10px;
+}
+
