--- a/src/components/SingleOrder/SingleOrder.css
+++ b/src/components/SingleOrder/SingleOrder.css
@@ -1,7 +1,25 @@
-.card {
-  
+.img {
 }
 
-.quantity {
-    text-align: center;
+.info {
+    background-color: #f1f1f1;
 }
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    /* background-color: DodgerBlue;  */
+    border: 1px solid rgb(206, 203, 203);
+    border-radius: 5px;
+    margin-top: 2px;
+  }
+  
+  .flex-container > div {
+    background-color: white;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 20px;
+  }
