--- a/src/components/Beer/Beer.css
+++ b/src/components/Beer/Beer.css
@@ -1,17 +1,26 @@
-.btn {
+/* .btn {
     margin:auto;
     width: 50%;
-}
+} */
 
-.button {
+.btn {
+    width: 50%;
+    margin: auto;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-form {
+.container {
     width: 50%;
     padding: 10px;
     display: block;
     text-align: center;
     margin:auto;
     margin-top: 100px;
+    border: 1px solid rgb(189, 209, 214);
+    border-radius: 5px;
+}
+
+.img {
+    margin-top: 20px;
 }
