--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -13,12 +13,18 @@
 }
 
 .radio {
-    margin-top: 10px;
+    margin-top: 20px;
+    /* border: 1px solid rgb(189, 209, 214);
+    border-radius: 5px; */
+    margin-bottom: 20px;
 }
 
 .registerBtn {
     margin:auto;
     width: 50%;
+}
+
+.btnContainer {
     margin-bottom: 30px;
 }
 
