--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -36,6 +36,7 @@
     margin-top: 5%;
     border: 1px solid rgb(189, 209, 214);
     border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 .deactivateBtn {
